cli/tests/testdata/check/broadcast_channel.ts.error.out
error: TS2304 [ERROR]: Cannot find name 'BroadcastChannel'.
const _channel = new BroadcastChannel("foo");
                     ~~~~~~~~~~~~~~~~
    at [WILDCARD]
